--- a/app/src/main/res/layout/activity_term_details.xml
+++ b/app/src/main/res/layout/activity_term_details.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".UI.TermDetails">
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:orientation="vertical"
@@ -21,16 +22,51 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hi!"/>
-            <TextView
+                android:text="Term Title"/>
+            <EditText
+                android:id="@+id/termtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hi!"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Hi!"/>
+                android:hint="Term One"/>
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Term Start Date"/>
+                <EditText
+                    android:id="@+id/termstartdate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="09-01-2022"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Term End Date"/>
+                <EditText
+                    android:id="@+id/termenddate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="02-28-2023"/>
+            </LinearLayout>
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/saveterm"
+                    android:text="Save"/>
+            </androidx.appcompat.widget.LinearLayoutCompat>
         </LinearLayout>
 
     </ScrollView>
@@ -43,4 +79,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/baseline_add_24" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        app:layout_constraintTop_toBottomOf="scrollView"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/courserecyclerview"
+        android:layout_width="409dp"
+        android:layout_height="373dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="301dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
