--- a/app/src/main/res/layout/activity_course_details.xml
+++ b/app/src/main/res/layout/activity_course_details.xml
@@ -8,9 +8,11 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_width="392dp"
+        android:layout_height="394dp"
         android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -113,13 +115,14 @@
                     android:id="@+id/editdate"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:inputType="none"
-                    android:hint="@string/_12_17_2022" />
+                    android:hint="@string/_12_17_2022"
+                    android:inputType="none" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -127,8 +130,8 @@
 
                 <EditText
                     android:id="@+id/editnote"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="350dp"
+                    android:layout_height="50dp"
                     android:hint="@string/note" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
