--- a/app/src/main/res/layout/course_list_item.xml
+++ b/app/src/main/res/layout/course_list_item.xml
@@ -4,28 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:id="@+id/textViewcoursetitle"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:text="TextView"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/textview"
             app:layout_constraintLeft_toLeftOf="parent"
-            tools:layout_editor_absoluteX="73dp"
-            tools:layout_editor_absoluteY="112dp" />
-        <TextView
-            android:id="@+id/textViewcoursestartdate"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/textViewcoursetitle"
+            app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="73dp"
             tools:layout_editor_absoluteY="112dp" />
     </androidx.appcompat.widget.LinearLayoutCompat>
