--- a/app/src/main/res/layout/activity_course_details.xml
+++ b/app/src/main/res/layout/activity_course_details.xml
@@ -8,8 +8,8 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="402dp"
-        android:layout_height="727dp"
+        android:layout_width="409dp"
+        android:layout_height="427dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:hint="@string/_03_31_22"
-                    android:inputType= "date" />
+                    android:inputType="date" />
             </LinearLayout>
 
             <LinearLayout
@@ -162,7 +162,7 @@
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="201dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -202,5 +202,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/baseline_add_24"
         android:contentDescription="@string/add_course_button" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/assessmentrecyclerview"
+        android:layout_width="422dp"
+        android:layout_height="538dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
