--- a/app/src/main/res/layout/course_list_item.xml
+++ b/app/src/main/res/layout/course_list_item.xml
@@ -23,5 +23,15 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="73dp"
             tools:layout_editor_absoluteY="112dp" />
+        <TextView
+            android:id="@+id/textViewcoursestartdate"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="@string/textview"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="73dp"
+            tools:layout_editor_absoluteY="112dp" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.constraintlayout.widget.ConstraintLayout>
